test/invalid-syntax/tab.djs
rly true
	shh that's a tab
wow
